--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "web-vitals": "^3.5.2",
     "tailwindcss": "^3.4.14",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47"
+    "postcss": "^8.4.47",
+    "react-slick": "^0.30.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
